--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,1 +1,113 @@
-<h1>Home {{name}}</h1>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item active text-center">
+            <div class="carousel-image">
+                <img src="../images/snappa_1.png" alt="Chania">
+                <h1 class="img_description text-left">Always Welcome</h1>
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="carousel-image">
+                        <img src="../images/leisure_at_deck.jpg" alt="Chania">
+                        <h1 class="img_description">Boredom got new look!</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="carousel-image">
+                        <img src="../images/rose_smells_rose.jpg" alt="Flower">
+                        <h1 class="img_description">The flowers found a mirror image.</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="carousel-image">
+                        <img src="../images/stroll_in_grass.jpg" alt="Flower">
+                        <h1 class="img_description">Seclusion is always selective!</h1>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<!---->
+<!--<div class="container-fluid no-display">
+    <div class=" row ">
+        <div class="col-md-12 col-sm-12 text-center parallax-image landing-img" id="slideshow" ng-style="{'background':'url({{slide_image}}) no-repeat fixed','background-size':'cover'}">
+
+        </div>
+    </div>
+</div>-->
+
+<div class="container-fluid parallax-image collection-img">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="title text-center">
+                <h1>Collections</h1>
+            </div>
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-md-10 text-center collections">
+            <div class="collections-row" ng-repeat="row in rows">
+                <div ng-repeat="i in row.images">
+                    <img ng-src="../images/{{img_name}}.jpg" class="image" />
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="triangle_right"></div>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid parallax-image collection-img">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="title text-center">
+                <h1>Stores</h1>
+            </div>
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-md-10 text-center collections">
+            <div class="collections-row" ng-repeat="row in rows">
+                <div ng-repeat="i in row.images">
+                    <img ng-src="../images/{{store}}.jpg" class="image" />
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="triangle_right"></div>
+        </div>
+    </div>
+</div>
+<!--<div class="container-fluid ">
+        <div class="row ">
+            <div class="col-md-12 text-center ">
+                <img src="../images/rose_smells_rose.jpg " width="100% " />
+            </div>
+        </div>
+    </div>-->
