--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,7 +14,7 @@
 }
 html,
 body {
-    background-color: #333333;
+    background-color: #D1D1D1;
     overflow-x: hidden;
     overflow-y: auto;
     color: #FFFFFF;
@@ -60,26 +60,48 @@ a.navbar-brand {
     -o-background-size: cover;
     background-size: cover;
 }
-.collection-img {
-    /*background: url("../images/leisure_at_deck.jpg") no-repeat fixed;*/
-    background: #FFFFFF;
-    -webkit-background-size: cover;
-    /* For WebKit*/
-    -moz-background-size: cover;
-    /* Mozilla*/
-    -o-background-size: cover;
-    background-size: cover;
-}
 .footer {
     height: 100px;
     padding-top: 40px;
+    background-color: #333333;
 }
 .title,
 h1 {
-    color: #000000;
+    color: #333333;
+}
+.triangle_right {
+    width: 0;
+    height: 0;
+    margin-top: 100%;
+    border-top: 100px solid transparent;
+    /*border-left: 80px solid #FF5A00;*/
+    border-left: 80px solid #333333;
+    border-bottom: 100px solid transparent;
+}
+.triangle_right:hover,
+h1.img_description:hover {
+    cursor: pointer;
+    text-decoration: underline;
+    color: #FF5A00;
+}
+.carousel-div {
+    position: relative;
+    width: 100%;
+    /* for IE 6 */
+}
+.carousel-div>img {
+    width: 1500px;
+    height: 730px;
+}
+h1.img_description {
+    position: fixed;
+    left: 4%;
+    bottom: 30%;
+    color: #FFFFFF;
 }
 .collections-row {
-    margin-top: 2%;
+    margin-top: 3%;
+    margin-bottom: 3%;
     margin-left: 15%;
 }
 .collections-row>div {
@@ -89,40 +111,23 @@ h1 {
     height: 300px;
     float: left;
 }
-.image {
-    border: 1px solid grey;
-}
-.image:hover {
+.collections-row>div:hover {
     cursor: pointer;
     transform: scale(1.1);
     opacity: 0.8;
 }
-.triangle_right {
-    width: 0;
-    height: 0;
-    margin-top: 100%;
-    border-top: 100px solid transparent;
-    border-left: 80px solid #FF5A00;
-    border-bottom: 100px solid transparent;
-}
-.triangle_right:hover,
-h1.img_description:hover {
-    cursor: pointer;
-    text-decoration: underline;
-    color: #FF5A00;
-}
-.carousel-image {
+.collections-div {
     position: relative;
+}
+.collections-div>h1 {
+    position: absolute;
     width: 100%;
-    /* for IE 6 */
-}
-.carousel-image>img {
-    width: 1500px;
-    height: 730px;
-}
-h1.img_description {
-    position: fixed;
-    left: 4%;
-    bottom: 30%;
+    margin: 0;
+    bottom: 0%;
+    opacity: 0;
     color: #FFFFFF;
+    background-color: #333333;
+}
+.collections-div:hover>h1 {
+    opacity: 1;
 }
