Added Wow.js and animate.css for animations

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -72,14 +72,14 @@
     <div class="row">
         <div class="col-md-10 text-center collections">
             <div class="collections-row" ng-repeat="row in rows">
-                <div ng-repeat="i in row.images" class="collections-div">
+                <div ng-repeat="i in row.images" class="collections-div wow fadeIn" data-wow-delay="1s">
                     <img ng-src="../images/{{img_name}}.jpg" class="image" />
                     <h1>Venkatagiri</h1>
                 </div>
             </div>
         </div>
         <div class="col-md-2">
-            <div class="triangle_right"></div>
+            <div class="triangle_right wow fadeIn" data-wow-delay="2s"></div>
         </div>
     </div>
 </div>
@@ -95,14 +95,14 @@
     <div class="row ">
         <div class="col-md-10 text-center collections">
             <div class="collections-row" ng-repeat="row in rows">
-                <div ng-repeat="i in row.images" class="collections-div">
+                <div ng-repeat="i in row.images" class="collections-div wow fadeIn" data-wow-delay="1s">
                     <img ng-src="../images/{{store}}.jpg" class="image" />
                     <h1>Desi Design</h1>
                 </div>
             </div>
         </div>
         <div class="col-md-2">
-            <div class="triangle_right"></div>
+            <div class="triangle_right wow fadeIn" data-wow-delay="2s"></div>
         </div>
     </div>
 </div>
