--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="../css/animate.min.css" />
     <link rel="stylesheet" type="text/css" href="../css/app.css" />
+
 </head>
 
 <body ng-app="ChicApp">
@@ -97,6 +99,11 @@
     <script src="../js/lib/angular-ui-router.min.js "></script>
     <script src="../js/modules/home.js "></script>
     <script src="../js/modules/collections.js"></script>
+    <script src="../js/lib/wow.js"></script>
+    <script>
+        new WOW().init();
+
+    </script>
     <script src="../js/app.js "></script>
 </body>
 
